@@ -172,7 +172,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (Ich grüße dir!)</string>
-    <string name="tutorial_1_msg">Dieses Tutorial wird dich kurz durch den boQwI\' leiten.\n\n* neueste Änderungen *\n2014-04-29: Vorlese-Funktion hinzugefügt (benötigt JellyBean).</string>
+    <string name="tutorial_1_msg">Dieses Tutorial wird dich kurz durch den boQwI\' leiten.\n\n* neueste Änderungen *\n2014-07-21: added lyrics for The Tribble Song; misc. edits to database.</string>
     <string name="tutorial_2_title">Suche</string>
     <string name="tutorial_2_msg">Durchsuche die Datenbank auf Englisch oder Klingonisch.</string>
     <string name="tutorial_3_title">Ressourcen</string>
